--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ span.logo{
 .progress-line{
     width: 70%;
     height: 10px;
-    border: 1px solid #FFF;
+    border: 1px solid black;
     border-radius: 5px;
 }
 .progress-line div{
